complete home page

--- a/src/app/user/home/home.component.css
+++ b/src/app/user/home/home.component.css
@@ -5,3 +5,9 @@
   background-size: cover;
   background-position: bottom;
 }
+
+hr {
+  border: none;
+  border-left: 1px solid hsla(200, 10%, 50%, 100);
+  width: 1px;
+}
