--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- background -->
-<div class="bg">
+<div class="bg bg-cover bg-bottom">
   <div
     class="md:container md:mx-auto h-full flex justify-center text-4xl items-center"
   >
