--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -93,7 +93,7 @@
     </div>
     <div class="flex h-40 items-center">
       <div class="flex flex-col h-full justify-around">
-        <a routerLink="/"
+        <a href="" target="_blank"
           ><svg
             width="23"
             height="23"
@@ -107,7 +107,7 @@
             />
           </svg>
         </a>
-        <a routerLink="/"
+        <a href="" target="_blank"
           ><svg
             width="23"
             height="23"
@@ -123,7 +123,7 @@
             />
           </svg>
         </a>
-        <a routerLink="/"
+        <a href="" target="_blank"
           ><svg
             width="26"
             height="23"
@@ -137,7 +137,7 @@
             />
           </svg>
         </a>
-        <a routerLink="/"
+        <a href="" target="_blank"
           ><svg
             width="26"
             height="23"
