--- a/src/styles.css
+++ b/src/styles.css
@@ -7,4 +7,8 @@
   margin: 0;
   padding: 0;
   font-family: "Farro", sans-serif;
+  box-sizing: border-box;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
