add custom scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,5 +10,21 @@
   box-sizing: border-box;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body::-webkit-scrollbar {
+  width: 0.8em;
+}
+
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #F72585;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
