--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -5,7 +5,7 @@
         <p class="text-4xl font-medium">Log in</p>
         <p>
           or
-          <a routerLink="/signup" class="text-flicker-pink font-medium"
+          <a routerLink="/auth/signup" class="text-flicker-pink font-medium"
             >Sign up</a
           >
         </p>
@@ -16,14 +16,14 @@
           <input class="p-2" matInput placeholder="Phone No." />
         </mat-form-field>
         <a
-          routerLink=""
+          routerLink="/"
           class="bg-flicker-pink rounded-lg text-white text-center mx-36"
         >
-          <button class="m-2 text-base">Continue</button>
+          <button class="m-2 text-base">Log in</button>
         </a>
       </form>
       <p class="text-xs text-center px-10 pt-5">
-        By clicking on continue,<span class="font-bold">
+        By clicking on Login,<span class="font-bold">
           I accept the Terms & Conditions & Privacy Policy
         </span>
       </p>
