--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -5,7 +5,7 @@
         <p class="text-4xl font-medium">Sign up</p>
         <p>
           or
-          <a routerLink="/login" class="text-flicker-pink font-medium"
+          <a routerLink="/auth/login" class="text-flicker-pink font-medium"
             >Log in</a
           >
         </p>
