--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -25,7 +25,7 @@
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
-          <input class="p-2" matInput placeholder="Password" />
+          <input type="password" class="p-2" matInput placeholder="Password" />
         </mat-form-field>
         <a
           routerLink=""
