create restaurant component

--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -3,14 +3,16 @@
   <div
     class="md:container md:mx-auto h-full flex justify-center text-4xl items-center"
   >
-    <p class="text-yellow-pantone font-medium">
+    <p class="text-yellow-pantone font-medium m-0">
       One thousands flavours in one place
     </p>
-    <button
-      class="bg-flicker-pink text-white text-lg px-3 py-1 mx-5 rounded-md text-2xl font-medium"
+    <a routerLink="/restaurant" class="bg-flicker-pink text-white rounded-md text-2xl font-medium text-lg mx-5 mb-3"
+      ><button
+        class="m-3"
+      >
+        Order now &#8594;
+      </button></a
     >
-      Order now &#8594;
-    </button>
   </div>
 </div>
 
