--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -6,9 +6,9 @@
     <p class="text-yellow-pantone font-medium m-0">
       One thousands flavours in one place
     </p>
-    <a routerLink="/restaurant" class="bg-flicker-pink text-white rounded-md text-2xl font-medium text-lg mx-5 mb-3"
+    <a routerLink="/restaurant" class="bg-flicker-pink text-white rounded-lg text-2xl font-medium text-lg mx-5 mb-3"
       ><button
-        class="m-3"
+        class="m-2 mx-3"
       >
         Order now &#8594;
       </button></a
