add modules and routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,9 +39,17 @@
     </div>
     <div class="flex m-5 items-center">
       <button class="mx-6">Log out</button>
-      <button class="bg-yellow-pantone text-flicker-pink rounded-lg flex p-2 mx-6">
-        <img class="rounded-full w-7 h-7 mr-3" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaUTp3j_LpF5r5_gNdvW0g7p057ExdcHWbUQ&usqp=CAU" alt="" />
-        <b>Profile</b>
+      <button
+        mat-button
+        (click)="openDialog()"
+        class="bg-yellow-pantone text-flicker-pink rounded-lg flex p-2 mx-6"
+      >
+        <img
+          class="rounded-full w-7 h-7 mr-3"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaUTp3j_LpF5r5_gNdvW0g7p057ExdcHWbUQ&usqp=CAU"
+          alt=""
+        />
+        Profile
       </button>
     </div>
     <!-- <div class="flex m-5 items-center">
