--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -96,7 +96,7 @@
   >
     <div class="flex h-40 items-center">
       <h1 class="text-xl font-medium text-yellow-pantone">LEARN MORE</h1>
-      <hr class="h-full w-1 mx-10" />
+      <hr class="h-full w-1 border-none mx-10" />
       <div class="flex flex-col h-full justify-around">
         <a routerLink="/">PRIVACY</a>
         <a routerLink="/">TERMS</a>
@@ -165,7 +165,7 @@
           </svg>
         </a>
       </div>
-      <hr class="h-full w-1 mx-10" />
+      <hr class="h-full w-1 border-none mx-10" />
       <h1 class="text-xl font-medium text-yellow-pantone">SOCIALS</h1>
     </div>
   </div>
