--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,10 +38,10 @@
       </div>
     </div>
     <div class="flex m-5 items-center">
-      <button class="mx-6">Log out</button>
+      <button mat-button (click)="cart()" class="mx-6">Log out</button>
       <button
         mat-button
-        (click)="openDialog()"
+        (click)="edit()"
         class="bg-yellow-pantone text-flicker-pink rounded-lg flex p-2 mx-6"
       >
         <img
