--- a/src/app/user/restaurant/restaurant.component.html
+++ b/src/app/user/restaurant/restaurant.component.html
@@ -48,10 +48,10 @@
           class="flex flex-col justify-between bg-black text-white h-full text-right p-3"
         >
           <div class="relative h-16">
-            <p class="text-3xl leading-5">
+            <a routerLink="/{{i.id}}}" class="text-3xl leading-5">
               {{ i.restaurant }} <br />
               <span class="text-xs text-taupe-gray">Pizza , Fast food</span>
-            </p>
+            </a>
             <svg
               class="absolute bottom-0 right-0"
               width="15"
