--- a/src/app/user/menu/menu.component.html
+++ b/src/app/user/menu/menu.component.html
@@ -43,5 +43,58 @@
       />
     </svg>
   </div>
- 
+  <div class="w-4/5 flex justify-between mt-5">
+    <div class="flex flex-col text-lg">
+      <span class="text-5xl">{{ restaurant.name }}</span>
+      <span class="text-taupe-gray">{{ restaurant.category }}</span>
+      <span class="text-taupe-gray">{{ restaurant.address }}</span>
+      <p>
+        <span class="text-tahiti">{{ restaurant.status }} </span
+        ><i class="mx-1"> &#9679; </i>
+        <span class="text-taupe-gray">Till {{ restaurant.time[1] }} pm</span>
+      </p>
+      <!-- <p>
+        <span class="text-flicker-pink">{{ restaurant.status }} </span><i class="mx-1"> &#9679; </i>
+        <span class="text-taupe-gray">Open at {{ restaurant.time[1] }} am</span>
+      </p> -->
+    </div>
+    <div class="flex bg-flicker-pink h-14 rounded-lg items-center text-white px-3">
+      <span class="text-lg mr-3">Reviews</span>
+      <div class="flex items-center border-l-2 border-white h-full pl-3">
+        <svg
+          width="15"
+          height="15"
+          viewBox="0 0 12 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M11.6121 4.22554L8.01478 3.67806L6.40666 0.264102C6.36274 0.170629 6.29048 0.0949614 6.20122 0.0489671C5.97736 -0.0667604 5.70532 0.0296792 5.59339 0.264102L3.98528 3.67806L0.38791 4.22554C0.288731 4.24038 0.198053 4.28934 0.128627 4.36352C0.0446959 4.45386 -0.00155415 4.5754 3.98784e-05 4.70142C0.0016339 4.82745 0.0509416 4.94766 0.137128 5.03563L2.73987 7.69291L2.12496 11.4452C2.11054 11.5324 2.11976 11.6222 2.15159 11.7043C2.18341 11.7864 2.23655 11.8575 2.305 11.9095C2.37344 11.9616 2.45444 11.9925 2.53882 11.9988C2.6232 12.0051 2.70757 11.9865 2.78238 11.9452L6.00003 10.1736L9.21768 11.9452C9.30553 11.9941 9.40754 12.0104 9.5053 11.9926C9.75183 11.9481 9.9176 11.7033 9.8751 11.4452L9.26019 7.69291L11.8629 5.03563C11.9338 4.96293 11.9805 4.86798 11.9947 4.76412C12.033 4.50447 11.8601 4.26412 11.6121 4.22554Z"
+            fill="#F8DD12"
+          />
+        </svg>
+        <div class="mx-2 text-center font-normal">
+          <span>Delivery</span>
+          <hr class="m-px" />
+          {{ restaurant.Reviews }}
+        </div>
+        <svg
+          width="18"
+          height="18"
+          viewBox="0 0 10 10"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M9 0H3C2.4485 0 2 0.4485 2 1V7C2 7.5515 2.4485 8 3 8H9C9.5515 8 10 7.5515 10 7V1C10 0.4485 9.5515 0 9 0ZM3 7V1H9L9.001 7H3Z"
+            fill="black"
+          />
+          <path
+            d="M1 3H0V9C0 9.5515 0.4485 10 1 10H7V9H1V3ZM6.5 2H5.5V3.5H4V4.5H5.5V6H6.5V4.5H8V3.5H6.5V2Z"
+            fill="black"
+          />
+        </svg>
+      </div>
+    </div>
+  </div>
 </div>
