--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -11,7 +11,8 @@
       class="bg-flicker-pink text-white rounded-lg font-medium text-lg mx-5 mb-3"
       ><button class="m-2 mx-3 flex items-center">
         Order now
-        <svg class="ml-2"
+        <svg
+          class="ml-2"
           width="18"
           height="8"
           viewBox="0 0 18 8"
@@ -96,7 +97,7 @@
   >
     <div class="flex h-40 items-center">
       <h1 class="text-xl font-medium text-yellow-pantone">LEARN MORE</h1>
-      <hr class="h-full w-1 border-none mx-10" />
+      <hr class="h-full border-l-2 border-white mx-10" />
       <div class="flex flex-col h-full justify-around">
         <a routerLink="/">PRIVACY</a>
         <a routerLink="/">TERMS</a>
@@ -165,7 +166,7 @@
           </svg>
         </a>
       </div>
-      <hr class="h-full w-1 border-none mx-10" />
+      <hr class="h-full border-l-2 border-white mx-10" />
       <h1 class="text-xl font-medium text-yellow-pantone">SOCIALS</h1>
     </div>
   </div>
