change logout btn color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="flex m-5 items-center">
-      <button mat-button (click)="cart()" class="mx-6">Log out</button>
+      <button mat-button (click)="cart()" class="text-taupe-gray mx-6">Log out</button>
       <button
         mat-button
         (click)="edit()"
