--- a/src/app/user/restaurant/restaurant.component.html
+++ b/src/app/user/restaurant/restaurant.component.html
@@ -48,7 +48,7 @@
           class="flex flex-col justify-between bg-black text-white h-full text-right p-3"
         >
           <div class="relative h-16">
-            <a routerLink="/{{i.id}}" class="text-3xl leading-5">
+            <a routerLink="/{{i.id}}/order" class="text-3xl leading-5">
               {{ i.restaurant }} <br />
               <span class="text-xs text-taupe-gray">Pizza , Fast food</span>
             </a>
