--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,13 @@
     <div class="flex m-5 items-center">
       <button class="text-taupe-gray mx-6">Log out</button>
       <button
+      [ngClass]="{
+        hidden:
+          router.url === '/admin/dashboard'|| 
+          router.url === '/admin/dashboard/order'||
+          router.url === '/admin/dashboard/review'|| 
+          router.url === '/admin/dashboard/add'
+      }"
         mat-button
         (click)="edit()"
         class="bg-yellow-pantone text-flicker-pink rounded-lg flex p-2 mx-6"
