--- a/src/app/user/menu/menu.component.html
+++ b/src/app/user/menu/menu.component.html
@@ -108,7 +108,7 @@
         >Order</a
       >
       <a
-        [ngClass]="{ 'text-flicker-pink': router.url === '/:id/order' }"
+        [ngClass]="{ 'text-flicker-pink': router.url === '/:id/review' }"
         routerLink="/1/review"
         class="mx-14 font-regular"
         >Reviews</a
