add food adding component

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -115,7 +115,7 @@
       >
       <a
         [ngClass]="{ 'text-flicker-pink': router.url === '/:id/add' }"
-        routerLink="/admin/add"
+        routerLink="/admin/dashboard/add"
         class="mx-14 font-regular flex items-center"
         >Add New
         <svg
