user signup service completed

--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -15,12 +15,12 @@
           <mat-label>Phone No.</mat-label>
           <input class="p-2" matInput placeholder="Phone No." />
         </mat-form-field>
-        <a
-          routerLink="/"
-          class="bg-flicker-pink rounded-lg text-white text-center mx-36"
+        <button
+          type="submit"
+          class="bg-flicker-pink m-2 text-base rounded-lg text-white text-center py-3 px-8 mx-auto"
         >
-          <button class="m-2 text-base">Log in</button>
-        </a>
+          Log in
+        </button>
       </form>
       <p class="text-xs text-center px-10 pt-5">
         By clicking on Login,<span class="font-bold">
