--- a/src/app/user/signup/signup.component.css
+++ b/src/app/user/signup/signup.component.css
@@ -1,7 +1,14 @@
 .signup {
-    background-image: url(../../../assets/images/auth.jpg);
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
+  background-image: url(../../../assets/images/auth.jpg);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
