--- a/src/app/admin/adminsignup/adminsignup.component.html
+++ b/src/app/admin/adminsignup/adminsignup.component.html
@@ -10,14 +10,14 @@
           >
         </p>
       </div>
-      <mat-tab-group>
-        <mat-tab label="Personal">
-          <form
-            (ngSubmit)="adminSignup()"
-            [formGroup]="signup"
-            class="flex flex-col"
-          >
-            <mat-form-field appearance="outline">
+      <form
+        (ngSubmit)="adminSignup()"
+        [formGroup]="signup"
+        class="flex flex-col"
+      >
+        <mat-tab-group>
+          <mat-tab label="Personal" class="flex flex-col">
+            <mat-form-field appearance="outline" class="w-full">
               <mat-label>Phone No. </mat-label>
               <input
                 class="p-2"
@@ -56,7 +56,7 @@
                 </div>
               </mat-hint>
             </mat-form-field>
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" class="w-full">
               <mat-label>Name</mat-label>
               <input
                 class="p-2"
@@ -87,7 +87,7 @@
                 </div>
               </mat-hint>
             </mat-form-field>
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" class="w-full">
               <mat-label>Email</mat-label>
               <input
                 class="p-2"
@@ -112,7 +112,7 @@
                 </div>
               </mat-hint>
             </mat-form-field>
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" class="w-full">
               <mat-label>Password</mat-label>
               <input
                 type="password"
@@ -145,56 +145,74 @@
                 </div>
               </mat-hint>
             </mat-form-field>
-          </form></mat-tab
-        >
-        <mat-tab label="Details">
-          <form [formGroup]="signup" class="flex flex-col mt-10">
-            <mat-form-field appearance="outline">
+          </mat-tab>
+          <mat-tab label="Details" class="flex flex-col">
+            <mat-form-field appearance="outline" class="w-full">
               <mat-label>Restaurant</mat-label>
-              <input class="p-2" matInput formControlName="restaurant" placeholder="Restaurant Name" />
+              <input
+                class="p-2"
+                matInput
+                formControlName="restaurant"
+                placeholder="Restaurant Name"
+              />
             </mat-form-field>
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" class="w-full">
               <mat-label>Address</mat-label>
-              <input class="p-2" matInput formControlName="address" placeholder="Address" />
+              <input
+                class="p-2"
+                matInput
+                formControlName="address"
+                placeholder="Address"
+              />
             </mat-form-field>
-            <div class="flex items-center justify-center">
-              <mat-form-field appearance="outline" class="mr-6">
+            <div class="flex items-center justify-center" class="w-full">
+              <mat-form-field appearance="outline" class="mr-6" class="w-1/2">
                 <mat-label>Distict</mat-label>
-                <input class="p-2" matInput formControlName="distict" placeholder="Distict" />
+                <input
+                  class="p-2"
+                  matInput
+                  formControlName="distict"
+                  placeholder="Distict"
+                />
               </mat-form-field>
-              <mat-form-field appearance="outline" class="ml-6">
+              <mat-form-field appearance="outline" class="ml-6" class="w-1/2">
                 <mat-label>State</mat-label>
-                <input class="p-2" matInput formControlName="state" placeholder="State" />
+                <input
+                  class="p-2"
+                  matInput
+                  formControlName="state"
+                  placeholder="State"
+                />
               </mat-form-field>
             </div>
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" class="w-full">
               <mat-label>Landmark</mat-label>
-              <input class="p-2" matInput formControlName="landmark" placeholder="Landmark" />
+              <input
+                class="p-2"
+                matInput
+                formControlName="landmark"
+                placeholder="Landmark"
+              />
             </mat-form-field>
-            <a
-              routerLink=""
-              class="bg-flicker-pink rounded-lg text-white text-center mx-36"
-            >
-              <button
-                [disabled]="signup.invalid"
-                type="submit"
-                [ngClass]="{
-                  'bg-silver text-black': signup.invalid,
-                  'text-white': signup.valid
-                }"
-                class="bg-flicker-pink m-4 text-base rounded-lg text-center py-3 px-8 mx-auto"
-              >
-                Continue
-              </button>
-            </a>
-          </form>
-          <p class="text-xs text-center px-10 pt-5">
-            By clicking on continue,<span class="font-bold">
-              I accept the Terms & Conditions & Privacy Policy
-            </span>
-          </p></mat-tab
+            <p class="text-xs text-center px-10 pt-5">
+              By clicking on continue,<span class="font-bold">
+                I accept the Terms & Conditions & Privacy Policy
+              </span>
+            </p></mat-tab
+          >
+        </mat-tab-group>
+        <button
+          [disabled]="signup.invalid"
+          type="submit"
+          [ngClass]="{
+            'bg-silver text-black': signup.invalid,
+            'text-white': signup.valid
+          }"
+          class="bg-flicker-pink m-4 text-base rounded-lg text-center py-3 px-8 mx-auto"
         >
-      </mat-tab-group>
+          Continue
+        </button>
+      </form>
     </div>
   </div>
 </div>
